fix: z-index of logo

--- a/components/Navigation/Navigation.module.scss
+++ b/components/Navigation/Navigation.module.scss
@@ -111,6 +111,7 @@ $item-color: hsla(40, 14%, 87%, 70%);
 
   .logo {
     position: fixed;
+    z-index: 999;
     cursor: pointer;
     width: 4.7rem;
     height: 4.7rem;
